// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Response Button Component should render snapshot when selected is false 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root makeStyles-root-7"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiBox-root MuiBox-root-11 makeStyles-key-8"
    >
      A
    </div>
    <div
      class="MuiBox-root MuiBox-root-12 makeStyles-text-10"
    >
      inner text
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;

exports[`Response Button Component should render snapshot when selected is true 1`] = `
<DocumentFragment>
  <button
    class="MuiButtonBase-root makeStyles-root-1 makeStyles-selected-3"
    tabindex="0"
    type="button"
  >
    <div
      class="MuiBox-root MuiBox-root-5 makeStyles-key-2"
    >
      A
    </div>
    <div
      class="MuiBox-root MuiBox-root-6 makeStyles-text-4"
    >
      inner text
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</DocumentFragment>
`;
